# sirit

./: CMakeLists.txt
include/sirit/: sirit.h
src/: sirit.cpp  stream.h
src/instructions/: atomic.cpp  extension.cpp  group.cpp
